@@ -21,7 +21,7 @@ import org.lwjgl.util.meshoptimizer.MeshOptimizer;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.nio.file.Files;
@@ -136,8 +136,8 @@ public class SceneExporter {
                 indices.add((int) indexBuffer.get());
             }
         }else{
-            try (var scope = MemorySession.openConfined()) {
-                var intIndices = MemorySegment.allocateNative((mesh.triangleCount + 2) * Integer.BYTES, scope).asByteBuffer().order(ByteOrder.nativeOrder()).asIntBuffer();
+            try (var scope = Arena.openConfined()) {
+                var intIndices = scope.allocate((mesh.triangleCount + 2) * Integer.BYTES).asByteBuffer().order(ByteOrder.nativeOrder()).asIntBuffer();
 
                 for (int i = 0; i < mesh.triangleCount + 2; i++) {
                     int indexIdx = i + mesh.indexOffset;
@@ -148,7 +148,7 @@ public class SceneExporter {
                 intIndices.flip();
 
                 var unstripMaxSize = MeshOptimizer.meshopt_unstripifyBound(intIndices.capacity());
-                var unstripIndices = MemorySegment.allocateNative(unstripMaxSize * Integer.BYTES, scope).asByteBuffer().order(ByteOrder.nativeOrder()).asIntBuffer();
+                var unstripIndices = scope.allocate(unstripMaxSize * Integer.BYTES).asByteBuffer().order(ByteOrder.nativeOrder()).asIntBuffer();
                 var unstripSize = MeshOptimizer.meshopt_unstripify(unstripIndices, intIndices, 0);
                 unstripIndices = unstripIndices.slice(0, (int) unstripSize);
 
